--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="id" data-theme="emerald">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./dist/output.css" />
   </head>
   <body>
-    <header class="bg-neutral">
+    <header class="bg-base-100 sticky top-0 z-50 drop-shadow-md mb-8">
       <div class="navbar px-4 container mx-auto">
         <div class="navbar-start">
           <div class="dropdown">
@@ -37,25 +37,56 @@
               <li><a>About</a></li>
             </ul>
           </div>
+          <label class="swap swap-rotate btn btn-ghost btn-circle">
+            <!-- this hidden checkbox controls the state -->
+            <input
+              type="checkbox"
+              data-toggle-theme="dracula,emerald"
+              data-act-class="ACTIVECLASS"
+            />
+
+            <!-- sun icon -->
+            <svg
+              class="swap-on fill-current w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
+              />
+            </svg>
+
+            <!-- moon icon -->
+            <svg
+              class="swap-off fill-current w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
+              />
+            </svg>
+          </label>
         </div>
         <div class="navbar-center">
-          <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+          <a
+            class="btn btn-ghost normal-case text-xl text-primary font-title font-bold"
+            >Volxtro</a
+          >
         </div>
         <div class="navbar-end">
-          <div class="bg-white rounded-lg hidden" id="search-bar">
+          <div
+            class="bg-neutral text-neutral rounded-lg hidden"
+            id="search-bar"
+          >
             <input
-              class="rounded-lg ease-out transition duration-300 py-2 pl-2"
+              class="rounded-lg ease-out text-neutral transition outline outline-1 duration-300 py-2 pl-2"
               id="search-field"
               type="text"
               placeholder="Search"
             />
           </div>
-          <button
-            id="btn-show"
-            class="btn btn-ghost btn-circle"
-            onclick="show()"
-            ondblclick="hide()"
-          >
+          <button id="btn-show" class="btn btn-ghost btn-circle">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5"
@@ -93,23 +124,24 @@
         </div>
       </div>
     </header>
-    <main class="container sm:container mx-auto mt-8 mb-8 px-4">
-      <div class="grid grid-cols-3 gap-4">
+    <main class="container sm:container mx-auto mt-8 mb-8 px-12">
+      <div class="grid grid-cols-3 gap-10">
         <div class="col-span-2 relative">
           <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
+            class="brightness-75 w-full h-full rounded-md"
+            src="http://unsplash.it/1000/667?random"
+            loading="lazy"
             alt=""
           />
           <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
+            <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+            <h3 class="text-white">Category</h3>
           </div>
           <div class="absolute left-8 bottom-8">
             <div class="mb-3 flex gap-2 items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
+                class="h-5 w-5 text-pink-500"
                 viewBox="0 0 20 20"
                 fill="currentColor"
               >
@@ -119,10 +151,10 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <h4>500</h4>
+              <h4 class="text-white">500</h4>
             </div>
             <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
+              class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
               Read More..
             </button>
@@ -130,19 +162,20 @@
         </div>
         <div class="relative">
           <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
+            class="brightness-75 w-full h-full rounded-md"
+            src="http://unsplash.it/1000/667?random"
+            loading="lazy"
             alt=""
           />
           <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
+            <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+            <h3 class="text-white">Category</h3>
           </div>
           <div class="absolute left-8 bottom-8">
             <div class="mb-3 flex gap-2 items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
+                class="h-5 w-5 text-pink-500"
                 viewBox="0 0 20 20"
                 fill="currentColor"
               >
@@ -152,10 +185,10 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <h4>500</h4>
+              <h4 class="text-white">500</h4>
             </div>
             <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
+              class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
               Read More..
             </button>
@@ -163,19 +196,20 @@
         </div>
         <div class="relative">
           <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
+            class="brightness-75 w-full h-full rounded-md"
+            src="http://unsplash.it/1000/667?random"
+            loading="lazy"
             alt=""
           />
           <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
+            <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+            <h3 class="text-white">Category</h3>
           </div>
           <div class="absolute left-8 bottom-8">
             <div class="mb-3 flex gap-2 items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
+                class="h-5 w-5 text-pink-500"
                 viewBox="0 0 20 20"
                 fill="currentColor"
               >
@@ -185,10 +219,10 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <h4>500</h4>
+              <h4 class="text-white">500</h4>
             </div>
             <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
+              class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
               Read More..
             </button>
@@ -196,19 +230,20 @@
         </div>
         <div class="relative">
           <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
+            class="brightness-75 w-full h-full rounded-md"
+            src="http://unsplash.it/1000/667?random"
+            loading="lazy"
             alt=""
           />
           <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
+            <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+            <h3 class="text-white">Category</h3>
           </div>
           <div class="absolute left-8 bottom-8">
             <div class="mb-3 flex gap-2 items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
+                class="h-5 w-5 text-pink-500"
                 viewBox="0 0 20 20"
                 fill="currentColor"
               >
@@ -218,10 +253,10 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <h4>500</h4>
+              <h4 class="text-white">500</h4>
             </div>
             <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
+              class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
               Read More..
             </button>
@@ -229,19 +264,20 @@
         </div>
         <div class="relative row-span-2">
           <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
+            class="brightness-75 w-full h-full rounded-md"
+            src="http://unsplash.it/1000/667?random"
+            loading="lazy"
             alt=""
           />
           <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
+            <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+            <h3 class="text-white">Category</h3>
           </div>
           <div class="absolute left-8 bottom-8">
             <div class="mb-3 flex gap-2 items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
+                class="h-5 w-5 text-pink-500"
                 viewBox="0 0 20 20"
                 fill="currentColor"
               >
@@ -251,10 +287,10 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <h4>500</h4>
+              <h4 class="text-white">500</h4>
             </div>
             <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
+              class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
               Read More..
             </button>
@@ -262,19 +298,20 @@
         </div>
         <div class="relative">
           <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
+            class="brightness-75 w-full h-full rounded-md"
+            src="http://unsplash.it/1000/667?random"
+            loading="lazy"
             alt=""
           />
           <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
+            <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+            <h3 class="text-white">Category</h3>
           </div>
           <div class="absolute left-8 bottom-8">
             <div class="mb-3 flex gap-2 items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
+                class="h-5 w-5 text-pink-500"
                 viewBox="0 0 20 20"
                 fill="currentColor"
               >
@@ -284,10 +321,10 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <h4>500</h4>
+              <h4 class="text-white">500</h4>
             </div>
             <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
+              class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
               Read More..
             </button>
@@ -295,19 +332,20 @@
         </div>
         <div class="relative">
           <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
+            class="brightness-75 w-full h-full rounded-md"
+            src="http://unsplash.it/1000/667?random"
+            loading="lazy"
             alt=""
           />
           <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
+            <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+            <h3 class="text-white">Category</h3>
           </div>
           <div class="absolute left-8 bottom-8">
             <div class="mb-3 flex gap-2 items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
+                class="h-5 w-5 text-pink-500"
                 viewBox="0 0 20 20"
                 fill="currentColor"
               >
@@ -317,76 +355,10 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <h4>500</h4>
+              <h4 class="text-white">500</h4>
             </div>
             <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
-            >
-              Read More..
-            </button>
-          </div>
-        </div>
-        <div class="relative col-span-2">
-          <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
-            alt=""
-          />
-          <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
-          </div>
-          <div class="absolute left-8 bottom-8">
-            <div class="mb-3 flex gap-2 items-center">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              <h4>500</h4>
-            </div>
-            <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
-            >
-              Read More..
-            </button>
-          </div>
-        </div>
-        <div class="relative">
-          <img
-            class="w-full h-full rounded-md"
-            src="https://dummyimage.com/1920x1080.png"
-            alt=""
-          />
-          <div class="absolute left-8 top-6">
-            <h2 class="text-xl font-bold capitalize">Title Text</h2>
-            <h3 class="text-base">Category</h3>
-          </div>
-          <div class="absolute left-8 bottom-8">
-            <div class="mb-3 flex gap-2 items-center">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
-                viewBox="0 0 20 20"
-                fill="currentColor"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-                  clip-rule="evenodd"
-                />
-              </svg>
-              <h4>500</h4>
-            </div>
-            <button
-              class="outline outline-offset-2 outline-2 py-1 rounded-md px-2"
+              class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
               Read More..
             </button>
@@ -455,6 +427,19 @@
         </div>
       </div>
     </footer>
-    <script src="./src/js/main.js"></script>
+    <script
+      type="module"
+      src="../src/js/main.js"
+      type="text/javascript"
+      defer
+    ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
