--- a/single-page.html
+++ b/single-page.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../dist/output.css" Content-type="text/css" />
   </head>
   <body>
-    <header class="bg-neutral sticky top-0 z-50">
+    <header class="bg-base-100 sticky top-0 z-50 drop-shadow-md mb-8">
       <div class="navbar px-4 container mx-auto">
         <div class="navbar-start">
           <div class="dropdown">
@@ -38,25 +38,56 @@
               <li><a>About</a></li>
             </ul>
           </div>
+          <label class="swap swap-rotate btn btn-ghost btn-circle">
+            <!-- this hidden checkbox controls the state -->
+            <input
+              type="checkbox"
+              data-toggle-theme="dracula,emerald"
+              data-act-class="ACTIVECLASS"
+            />
+
+            <!-- sun icon -->
+            <svg
+              class="swap-on fill-current w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
+              />
+            </svg>
+
+            <!-- moon icon -->
+            <svg
+              class="swap-off fill-current w-5 h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
+              />
+            </svg>
+          </label>
         </div>
         <div class="navbar-center">
-          <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+          <a
+            class="btn btn-ghost normal-case text-xl text-primary font-title font-bold"
+            >Volxtro</a
+          >
         </div>
         <div class="navbar-end">
-          <div class="bg-white rounded-lg hidden" id="search-bar">
+          <div
+            class="bg-neutral text-neutral rounded-lg hidden"
+            id="search-bar"
+          >
             <input
-              class="rounded-lg ease-out transition duration-300 py-2 pl-2"
+              class="rounded-lg ease-out text-neutral transition outline outline-1 duration-300 py-2 pl-2"
               id="search-field"
               type="text"
               placeholder="Search"
             />
           </div>
-          <button
-            id="btn-show"
-            class="btn btn-ghost btn-circle"
-            onclick="show()"
-            ondblclick="hide()"
-          >
+          <button id="btn-show" class="btn btn-ghost btn-circle">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5"
@@ -95,8 +126,22 @@
       </div>
     </header>
     <main class="mx-auto">
-      <img class="h-1/6" src="http://unsplash.it/1920/1080?random" alt="" />
-      <section class="container mt-8 mb-8 mx-auto px-40">
+      <div class="relative">
+        <img
+          class="h-96 brightness-75 w-screen"
+          src="http://unsplash.it/1920/1080?random"
+          loading="lazy"
+          alt=""
+        />
+        <h1
+          class="absolute leading-10 inset-y-1/4 inset-x-1/4 font-title font-bold text-3xl text-white text-center"
+        >
+          Sit nisi magna occaecat consequat dolore magna aliqua. Ipsum in dolor
+          deserunt officia fugiat exercitation incididunt irure ipsum. Sunt ea
+          pariatur aliqua minim duis culpa nisi aliqua labore consequat.
+        </h1>
+      </div>
+      <section class="container mt-8 mb-8 mx-auto px-60">
         <!-- 
           * Author
           * Avatar
@@ -105,10 +150,11 @@
         <div class="flex mb-8 items-center justify-between">
           <div class="flex">
             <div class="avatar flex items-center">
-              <div
-                class="w-16 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2"
-              >
-                <img src="https://api.lorem.space/image/face?hash=3174" />
+              <div class="w-16 rounded-full">
+                <img
+                  src="https://api.lorem.space/image/face?hash=3174"
+                  loading="lazy"
+                />
               </div>
             </div>
             <div class="ml-4 flex items-center">
@@ -137,13 +183,13 @@
           </ul>
         </div>
         <article>
-          <h2 class="font-bold text-xl mb-8">
+          <h2 class="font-bold text-xl mb-8 font-title">
             Laboris proident ex reprehenderit sint. Lorem id officia sunt
             adipisicing. Amet commodo eiusmod ipsum esse. Amet tempor et
             occaecat amet esse amet occaecat anim reprehenderit pariatur elit.
           </h2>
           <div class="whitespace-normal">
-            <p class="leading-6 mb-6">
+            <p class="leading-6 mb-6 text-base font-content">
               Labore deserunt velit velit in reprehenderit enim sit in mollit
               nulla aliqua nostrud irure. Nisi sint amet nostrud magna irure
               commodo mollit proident. Dolor consectetur aliqua consequat nulla
@@ -152,7 +198,7 @@
               deserunt officia esse consectetur consequat nulla mollit proident
               elit. Enim enim laboris minim voluptate magna elit.
             </p>
-            <p class="leading-6 mb-6">
+            <p class="leading-6 mb-6 text-base font-content">
               Labore deserunt velit velit in reprehenderit enim sit in mollit
               nulla aliqua nostrud irure. Nisi sint amet nostrud magna irure
               commodo mollit proident. Dolor consectetur aliqua consequat nulla
@@ -161,7 +207,7 @@
               deserunt officia esse consectetur consequat nulla mollit proident
               elit. Enim enim laboris minim voluptate magna elit.
             </p>
-            <p class="leading-6 mb-6">
+            <p class="leading-6 mb-6 text-base font-content">
               Labore deserunt velit velit in reprehenderit enim sit in mollit
               nulla aliqua nostrud irure. Nisi sint amet nostrud magna irure
               commodo mollit proident. Dolor consectetur aliqua consequat nulla
@@ -170,7 +216,25 @@
               deserunt officia esse consectetur consequat nulla mollit proident
               elit. Enim enim laboris minim voluptate magna elit.
             </p>
-            <p class="leading-6 mb-6">
+            <p class="leading-6 mb-6 text-base font-content">
+              Labore deserunt velit velit in reprehenderit enim sit in mollit
+              nulla aliqua nostrud irure. Nisi sint amet nostrud magna irure
+              commodo mollit proident. Dolor consectetur aliqua consequat nulla
+              tempor commodo excepteur ex labore voluptate non Lorem duis.
+              Labore enim pariatur ex nostrud consectetur culpa tempor. Cillum
+              deserunt officia esse consectetur consequat nulla mollit proident
+              elit. Enim enim laboris minim voluptate magna elit.
+            </p>
+            <p class="leading-6 mb-6 text-base font-content">
+              Labore deserunt velit velit in reprehenderit enim sit in mollit
+              nulla aliqua nostrud irure. Nisi sint amet nostrud magna irure
+              commodo mollit proident. Dolor consectetur aliqua consequat nulla
+              tempor commodo excepteur ex labore voluptate non Lorem duis.
+              Labore enim pariatur ex nostrud consectetur culpa tempor. Cillum
+              deserunt officia esse consectetur consequat nulla mollit proident
+              elit. Enim enim laboris minim voluptate magna elit.
+            </p>
+            <p class="leading-6 mb-6 text-base font-content">
               Labore deserunt velit velit in reprehenderit enim sit in mollit
               nulla aliqua nostrud irure. Nisi sint amet nostrud magna irure
               commodo mollit proident. Dolor consectetur aliqua consequat nulla
@@ -183,37 +247,37 @@
         </article>
       </section>
       <section id="cta">
-        <div class="py-16 bg-gradient-to-br from-yellow-50 to-red-100">
-          <div class="container m-auto px-6 text-gray-600 md:px-12 xl:px-6">
+        <div class="py-16 bg-gradient-to-br from-neutral to-base-100">
+          <div class="container m-auto px-6 text-base-300 md:px-12 xl:px-6">
             <div class="mb-12 space-y-2 text-center">
-              <h2 class="text-2xl text-yellow-900 font-bold md:text-4xl">
+              <h2 class="text-2xl text-primary font-bold md:text-4xl">
                 Related Posts
               </h2>
             </div>
 
             <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-4">
               <div
-                class="relative p-1 pb-16 rounded-xl group bg-white bg-opacity-50 shadow-xl hover:rounded-2xl"
+                class="relative p-1 pb-16 rounded-xl group bg-base-content bg-opacity-30 shadow-xl hover:rounded-2xl"
               >
                 <div class="relative">
                   <div
                     aria-hidden="true"
-                    class="absolute inset-x-0 bottom-0 h-64 bg-gradient-to-b from-transparent to-yellow-50"
+                    class="absolute inset-x-0 bottom-0 h-64 bg-gradient-to-b from-transparent to-accent"
                   ></div>
                   <img
                     src="http://unsplash.it/1000/667?random"
-                    alt="art cover"
                     loading="lazy"
+                    alt="art cover"
                     width="1000"
                     height="667"
                     class="h-64 w-full object-cover object-top rounded-t-lg transition duration-500 group-hover:rounded-t-xl"
                   />
                 </div>
                 <div class="relative space-y-4 -mt-20 p-4">
-                  <h4 class="text-2xl font-semibold text-yellow-900">
+                  <h4 class="text-2xl font-semibold text-black">
                     De fuga fugiat lorem ispum laboriosam expedita.
                   </h4>
-                  <p class="text-gray-600">
+                  <p class="text-base-300">
                     Voluptates harum aliquam totam, doloribus eum impedit atque!
                     Temporibus...
                   </p>
@@ -224,14 +288,14 @@
                 >
                   <div
                     aria-hidden="true"
-                    class="h-10 w-10 flex border border-yellow-200 rounded-full"
+                    class="h-10 w-10 flex border border-info-content rounded-full"
                   >
                     <svg
                       aria-hidden="true"
                       width="24"
                       height="24"
                       fill="none"
-                      class="my-auto mx-auto flex-none text-yellow-700"
+                      class="my-auto mx-auto flex-none text-info"
                     >
                       <path
                         d="M10.75 8.75l3.5 3.25-3.5 3.25"
@@ -242,19 +306,20 @@
                       ></path>
                     </svg>
                   </div>
-                  <span class="text-yellow-600">Read more</span>
+                  <span class="text-info">Read more</span>
                 </a>
               </div>
               <div
-                class="relative p-1 pb-16 rounded-xl group bg-white bg-opacity-50 shadow-xl hover:rounded-2xl"
+                class="relative p-1 pb-16 rounded-xl group bg-base-content bg-opacity-30 shadow-xl hover:rounded-2xl"
               >
                 <div class="relative">
                   <div
                     aria-hidden="true"
-                    class="absolute inset-x-0 bottom-0 h-64 bg-gradient-to-b from-transparent to-yellow-50"
+                    class="absolute inset-x-0 bottom-0 h-64 bg-gradient-to-b from-transparent to-accent"
                   ></div>
                   <img
                     src="http://unsplash.it/1000/667?random"
+                    loading="lazy"
                     alt="art cover"
                     loading="lazy"
                     width="1000"
@@ -263,10 +328,10 @@
                   />
                 </div>
                 <div class="relative space-y-4 -mt-20 p-4">
-                  <h4 class="text-2xl font-semibold text-yellow-900">
+                  <h4 class="text-2xl font-semibold text-black">
                     lorem ispum laboriosam expedita.
                   </h4>
-                  <p class="text-gray-600">
+                  <p class="text-base-300">
                     Voluptates harum aliquam totam, doloribus eum impedit atque!
                     Temporibus...
                   </p>
@@ -277,14 +342,14 @@
                 >
                   <div
                     aria-hidden="true"
-                    class="h-10 w-10 flex border border-yellow-200 rounded-full"
+                    class="h-10 w-10 flex border border-info-content rounded-full"
                   >
                     <svg
                       aria-hidden="true"
                       width="24"
                       height="24"
                       fill="none"
-                      class="my-auto mx-auto flex-none text-yellow-700"
+                      class="my-auto mx-auto flex-none text-info"
                     >
                       <path
                         d="M10.75 8.75l3.5 3.25-3.5 3.25"
@@ -295,19 +360,20 @@
                       ></path>
                     </svg>
                   </div>
-                  <span class="text-yellow-600">Read more</span>
+                  <span class="text-info">Read more</span>
                 </a>
               </div>
               <div
-                class="relative p-1 pb-16 rounded-xl group bg-white bg-opacity-50 shadow-xl hover:rounded-2xl"
+                class="relative p-1 pb-16 rounded-xl group bg-base-content bg-opacity-30 shadow-xl hover:rounded-2xl"
               >
                 <div class="relative">
                   <div
                     aria-hidden="true"
-                    class="absolute inset-x-0 bottom-0 h-64 bg-gradient-to-b from-transparent to-yellow-50"
+                    class="absolute inset-x-0 bottom-0 h-64 bg-gradient-to-b from-transparent to-accent"
                   ></div>
                   <img
                     src="http://unsplash.it/1000/667?random"
+                    loading="lazy"
                     alt="art cover"
                     loading="lazy"
                     width="1000"
@@ -316,10 +382,10 @@
                   />
                 </div>
                 <div class="relative space-y-4 -mt-20 p-4">
-                  <h4 class="text-2xl font-semibold text-yellow-900">
+                  <h4 class="text-2xl font-semibold text-black">
                     De fuga fugiat lorem ispum laboriosam expedita.
                   </h4>
-                  <p class="text-gray-600">
+                  <p class="text-base-300">
                     Voluptates harum aliquam totam, doloribus eum impedit atque!
                     Temporibus...
                   </p>
@@ -330,14 +396,14 @@
                 >
                   <div
                     aria-hidden="true"
-                    class="h-10 w-10 flex border border-yellow-200 rounded-full"
+                    class="h-10 w-10 flex border border-info-content rounded-full"
                   >
                     <svg
                       aria-hidden="true"
                       width="24"
                       height="24"
                       fill="none"
-                      class="my-auto mx-auto flex-none text-yellow-700"
+                      class="my-auto mx-auto flex-none text-info"
                     >
                       <path
                         d="M10.75 8.75l3.5 3.25-3.5 3.25"
@@ -348,31 +414,31 @@
                       ></path>
                     </svg>
                   </div>
-                  <span class="text-yellow-600">Read more</span>
+                  <span class="text-info">Read more</span>
                 </a>
               </div>
               <div
-                class="relative p-1 pb-16 rounded-xl group bg-white bg-opacity-50 shadow-xl hover:rounded-2xl"
+                class="relative p-1 pb-16 rounded-xl group bg-base-content bg-opacity-30 shadow-xl hover:rounded-2xl"
               >
                 <div class="relative">
                   <div
                     aria-hidden="true"
-                    class="absolute inset-x-0 bottom-0 h-64 bg-gradient-to-b from-transparent to-yellow-50"
+                    class="absolute inset-x-0 bottom-0 h-64 bg-gradient-to-b from-transparent to-accent"
                   ></div>
                   <img
                     src="http://unsplash.it/1000/667?random"
-                    alt="art cover"
                     loading="lazy"
+                    alt="art cover"
                     width="1000"
                     height="667"
                     class="h-64 w-full object-cover rounded-t-lg transition duration-500 group-hover:rounded-t-xl"
                   />
                 </div>
                 <div class="relative space-y-4 -mt-20 p-4">
-                  <h4 class="text-2xl font-semibold text-yellow-900">
+                  <h4 class="text-2xl font-semibold text-black">
                     lorem ispum laboriosam expedita.
                   </h4>
-                  <p class="text-gray-600">
+                  <p class="text-base-300">
                     Voluptates harum aliquam totam, doloribus eum impedit atque!
                     Temporibus...
                   </p>
@@ -383,14 +449,14 @@
                 >
                   <div
                     aria-hidden="true"
-                    class="h-10 w-10 flex border border-yellow-200 rounded-full"
+                    class="h-10 w-10 flex border border-info-content rounded-full"
                   >
                     <svg
                       aria-hidden="true"
                       width="24"
                       height="24"
                       fill="none"
-                      class="my-auto mx-auto flex-none text-yellow-700"
+                      class="my-auto mx-auto flex-none text-info"
                     >
                       <path
                         d="M10.75 8.75l3.5 3.25-3.5 3.25"
@@ -401,7 +467,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span class="text-yellow-600">Read more</span>
+                  <span class="text-info">Read more</span>
                 </a>
               </div>
             </div>
@@ -470,7 +536,11 @@
         </div>
       </div>
     </footer>
-    <script module src="../src/js/main.js" type="text/javascript"></script>
+    <script
+      type="module"
+      src="../src/js/main.js"
+      type="text/javascript"
+    ></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
