--- a/index.html
+++ b/index.html
@@ -427,12 +427,8 @@
         </div>
       </div>
     </footer>
-    <script
-      type="module"
-      src="../src/js/main.js"
-      type="text/javascript"
-      defer
-    ></script>
+    <base type="module" href="/src/js/main.js" />
+    <script type="module" src="../src/js/main.js" defer></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
