--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </div>
         <div class="navbar-center">
           <a
+            href="index.html"
             class="btn btn-ghost normal-case text-xl text-primary font-title font-bold"
             >Volxtro</a
           >
@@ -156,7 +157,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              Read More..
+              <a href="singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -190,7 +191,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              Read More..
+              <a href="singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -224,7 +225,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              Read More..
+              <a href="singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -258,7 +259,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              Read More..
+              <a href="singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -292,7 +293,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              Read More..
+              <a href="singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -326,7 +327,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              Read More..
+              <a href="singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -360,7 +361,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              Read More..
+              <a href="singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
