--- a/single-page.html
+++ b/single-page.html
@@ -536,11 +536,8 @@
         </div>
       </div>
     </footer>
-    <script
-      type="module"
-      src="../src/js/main.js"
-      type="text/javascript"
-    ></script>
+    <base href="./" />
+    <script type="module" src="./src/js/main.js" defer></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
