Url for Single Post

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              <a href="singel-page.html">Read More..</a>
+              <a href="/singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -191,7 +191,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              <a href="singel-page.html">Read More..</a>
+              <a href="/singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -225,7 +225,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              <a href="singel-page.html">Read More..</a>
+              <a href="/singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -259,7 +259,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              <a href="singel-page.html">Read More..</a>
+              <a href="/singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -293,7 +293,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              <a href="singel-page.html">Read More..</a>
+              <a href="/singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -327,7 +327,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              <a href="singel-page.html">Read More..</a>
+              <a href="/singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
@@ -361,7 +361,7 @@
             <button
               class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
             >
-              <a href="singel-page.html">Read More..</a>
+              <a href="/singel-page.html">Read More..</a>
             </button>
           </div>
         </div>
