--- a/src/single-page.html
+++ b/src/single-page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Document</title>
-    <link rel="stylesheet" href="../dist/output.css" Content-type="text/css" />
+    <link rel="stylesheet" href="./dist/output.css" Content-type="text/css" />
   </head>
   <body>
     <header class="bg-base-100 sticky top-0 z-50 drop-shadow-md mb-8">
@@ -71,6 +71,7 @@
         </div>
         <div class="navbar-center">
           <a
+            href="index.html"
             class="btn btn-ghost normal-case text-xl text-primary font-title font-bold"
             >Volxtro</a
           >
@@ -537,7 +538,7 @@
       </div>
     </footer>
     <base href="./" />
-    <script type="module" src="./src/js/main.js" defer></script>
+    <script type="module" src="./js/main.js" defer></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
