Fix Carousel Responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -127,32 +127,135 @@
     </header>
     <main class="mx-auto divide-y-2">
       <section aria-label="carousel" class="mb-8 px-20">
-        <div class="carousel relative w-full h-96" data-carousel>
+        <div class="carousel lg:h-100 h-80 relative w-full" data-carousel>
           <ul data-slides>
             <li data-active class="carousel-item inset-0 w-full">
               <img
-                src="http://unsplash.it/1000/440?random"
+                src="https://picsum.photos/id/237/1000/440"
                 class="w-full object-cover brightness-75"
                 loading="lazy"
               />
+              <div
+                class="absolute transform lg:-translate-y-1/2 inset-x-40 lg:top-1/2 top-8"
+              >
+                <a href="single-page.html">
+                  <h2
+                    class="text-white break-words text-center font-bold lg:text-3xl"
+                  >
+                    Ea dolore incididunt duis velit proident sunt ad velit
+                    dolor. Duis aliqua aute ad ea. Proident minim in cillum
+                    officia excepteur ullamco cillum.
+                  </h2>
+                  <div
+                    class="flex items-center justify-center divide-x divide-white"
+                  >
+                    <div class="avatar items-center lg:px-4 px-2 py-3">
+                      <div class="lg:w-12 w-10 rounded-full">
+                        <img
+                          src="https://api.lorem.space/image/face?hash=92310"
+                        />
+                      </div>
+                      <h4 class="pl-2 text-white hidden lg:block">
+                        Susilo Suharsono
+                      </h4>
+                    </div>
+                    <div class="lg:px-4 px-2 py-3 text-sm text-white">
+                      June 13, 2022
+                    </div>
+                    <div class="lg:flex justify-end gap-2 lg:px-4 px-2 py-3">
+                      <div class="badge badge-sm badge-accent">Fashion</div>
+                      <div class="badge badge-sm badge-accent">Products</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </li>
             <li class="carousel-item absolute inset-0 w-full">
               <img
-                src="http://unsplash.it/1000/440?random"
+                src="https://picsum.photos/id/257/1000/440"
                 class="w-full object-cover brightness-75"
                 loading="lazy"
               />
+              <div
+                class="absolute transform lg:-translate-y-1/2 inset-x-40 lg:top-1/2 top-8"
+              >
+                <a href="single-page.html">
+                  <h2
+                    class="text-white break-words text-center font-bold lg:text-3xl"
+                  >
+                    Ea dolore incididunt duis velit proident sunt ad velit
+                    dolor. Duis aliqua aute ad ea. Proident minim in cillum
+                    officia excepteur ullamco cillum.
+                  </h2>
+                  <div
+                    class="flex items-center justify-center divide-x divide-white"
+                  >
+                    <div class="avatar items-center px-4 py-3">
+                      <div class="lg:w-12 w-10 rounded-full">
+                        <img
+                          src="https://api.lorem.space/image/face?hash=92310"
+                        />
+                      </div>
+                      <h4 class="pl-2 text-white hidden lg:block">
+                        Susilo Suharsono
+                      </h4>
+                    </div>
+                    <div class="px-4 py-3 text-sm text-white">
+                      June 13, 2022
+                    </div>
+                    <div class="lg:flex justify-end gap-2 px-4 py-3">
+                      <div class="badge badge-sm badge-accent">Fashion</div>
+                      <div class="badge badge-sm badge-accent">Products</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </li>
             <li class="carousel-item absolute inset-0 w-full">
               <img
-                src="http://unsplash.it/1000/440?random"
+                src="https://picsum.photos/id/247/1000/440"
                 class="w-full object-cover brightness-75"
                 loading="lazy"
               />
+              <div
+                class="absolute transform lg:-translate-y-1/2 inset-x-40 lg:top-1/2 top-8"
+              >
+                <a href="single-page.html">
+                  <h2
+                    class="text-white break-words text-center font-bold lg:text-3xl"
+                  >
+                    Ea dolore incididunt duis velit proident sunt ad velit
+                    dolor. Duis aliqua aute ad ea. Proident minim in cillum
+                    officia excepteur ullamco cillum.
+                  </h2>
+                  <div
+                    class="flex items-center justify-center divide-x divide-white"
+                  >
+                    <div class="avatar items-center px-4 py-3">
+                      <div class="lg:w-12 w-10 rounded-full">
+                        <img
+                          src="https://api.lorem.space/image/face?hash=92310"
+                        />
+                      </div>
+                      <h4 class="pl-2 text-white hidden lg:block">
+                        Susilo Suharsono
+                      </h4>
+                    </div>
+                    <div class="px-4 py-3 text-sm text-white">
+                      June 13, 2022
+                    </div>
+                    <div class="lg:flex justify-end gap-2 px-4 py-3">
+                      <div class="badge badge-sm badge-accent">Fashion</div>
+                      <div class="badge badge-sm badge-accent">Products</div>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </li>
           </ul>
+
           <div
-            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            class="absolute flex justify-between transform lg:-translate-y-1/2 left-5 right-5 lg:top-1/2 top-1/4"
           >
             <button data-carousel-button="prev" class="btn btn-circle">
               <ion-icon name="chevron-back"></ion-icon>
@@ -165,7 +268,7 @@
       </section>
 
       <div class="container px-20 mb-8 mx-auto">
-        <h2 class="text-center font-title font-bold text-5xl mb-8">
+        <h2 class="text-center font-title font-bold text-5xl my-8">
           Recent Post
         </h2>
         <div class="grid lg:grid-cols-2 grid-cols-1 gap-10">
@@ -355,7 +458,9 @@
 
       <section id="widget" class="mb-8">
         <div class="lg:flex container px-20 mx-auto">
-          <div class="grid gap-y-10 flex-grow rounded-box place-items-center">
+          <div
+            class="grid gap-y-10 flex-grow rounded-box place-items-center mt-4"
+          >
             <h2 class="font-title text-xl font-bold mb-8">Popular Post</h2>
             <div class="card lg:card-side bg-base-100 shadow-xl">
               <figure>
@@ -393,7 +498,9 @@
             </div>
           </div>
           <div class="divider lg:divider-horizontal divider-vertical"></div>
-          <div class="grid gap-y-10 flex-grow rounded-box place-items-center">
+          <div
+            class="grid gap-y-10 flex-grow rounded-box place-items-center mt-4"
+          >
             <h2 class="font-title text-xl mb-8 font-bold">Random Post</h2>
             <div class="card lg:card-side bg-base-100 shadow-xl">
               <figure>
