Add Popular Post

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
       </div>
     </header>
     <main class="mx-auto divide-y-2">
-      <section aria-label="carousel" class="mb-8 px-20">
+      <section title="carousel" class="mb-8 px-20">
         <div class="carousel lg:h-100 h-80 relative w-full" data-carousel>
           <ul data-slides>
             <li data-active class="carousel-item inset-0 w-full">
@@ -267,196 +267,269 @@
         </div>
       </section>
 
-      <div class="container px-20 mb-8 mx-auto">
-        <h2 class="text-center font-title font-bold text-5xl my-8">
-          Recent Post
-        </h2>
-        <div class="grid lg:grid-cols-2 grid-cols-1 gap-10">
-          <div class="card bg-base-100 shadow-xl">
-            <figure>
-              <img
-                src="https://api.lorem.space/image/shoes?"
-                class="w-full h-64 object-cover"
-                alt="Shoes"
-                loading="lazy"
-              />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title font-bold">
-                Ullamco culpa tempor quis aliqua minim tempor duis nostrud Lorem
-                culpa exercitation ut.
-              </h2>
-              <div class="card-actions justify-between items-center mt-2">
-                <div class="avatar items-center">
-                  <div class="w-12 rounded-full">
-                    <img src="https://api.lorem.space/image/face?hash=92310" />
+      <section title="recent-post" class="px-20 mb-8">
+        <div class="container mx-auto">
+          <h2 class="text-center font-title font-bold text-5xl my-8">
+            Recent Post
+          </h2>
+          <div class="grid lg:grid-cols-2 grid-cols-1 gap-10">
+            <div class="card bg-base-100 shadow-xl">
+              <figure>
+                <img
+                  src="https://api.lorem.space/image/shoes?"
+                  class="w-full h-64 object-cover"
+                  alt="Shoes"
+                  loading="lazy"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title font-bold">
+                  Ullamco culpa tempor quis aliqua minim tempor duis nostrud
+                  Lorem culpa exercitation ut.
+                </h2>
+                <div class="card-actions justify-between items-center mt-2">
+                  <div class="avatar items-center">
+                    <div class="w-12 rounded-full">
+                      <img
+                        src="https://api.lorem.space/image/face?hash=92310"
+                      />
+                    </div>
+                    <h4 class="pl-2">Susilo Suharsono</h4>
                   </div>
-                  <h4 class="pl-2">Susilo Suharsono</h4>
+                  <div class="text-sm text-info">June 13, 2022</div>
+                  <div class="flex justify-end gap-2">
+                    <div class="badge badge-sm badge-accent">Fashion</div>
+                    <div class="badge badge-sm badge-accent">Products</div>
+                  </div>
                 </div>
-                <div class="text-sm text-info">June 13, 2022</div>
-                <div class="flex justify-end gap-2">
-                  <div class="badge badge-sm badge-accent">Fashion</div>
-                  <div class="badge badge-sm badge-accent">Products</div>
+              </div>
+            </div>
+            <div class="card bg-base-100 shadow-xl">
+              <figure>
+                <img
+                  src="https://api.lorem.space/image/shoes?"
+                  class="w-full h-64 object-cover"
+                  alt="Shoes"
+                  loading="lazy"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title font-bold">
+                  Ullamco culpa tempor quis aliqua minim tempor duis nostrud
+                  Lorem culpa exercitation ut.
+                </h2>
+                <div class="card-actions justify-between items-center mt-2">
+                  <div class="avatar items-center">
+                    <div class="w-12 rounded-full">
+                      <img
+                        src="https://api.lorem.space/image/face?hash=92310"
+                      />
+                    </div>
+                    <h4 class="pl-2">Susilo Suharsono</h4>
+                  </div>
+                  <div class="text-sm text-info">June 13, 2022</div>
+                  <div class="flex justify-end gap-2">
+                    <div class="badge badge-sm badge-accent">Fashion</div>
+                    <div class="badge badge-sm badge-accent">Products</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-base-100 shadow-xl">
+              <figure>
+                <img
+                  src="https://api.lorem.space/image/shoes?"
+                  class="w-full h-64 object-cover"
+                  alt="Shoes"
+                  loading="lazy"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title font-bold">
+                  Ullamco culpa tempor quis aliqua minim tempor duis nostrud
+                  Lorem culpa exercitation ut.
+                </h2>
+                <div class="card-actions justify-between items-center mt-2">
+                  <div class="avatar items-center">
+                    <div class="w-12 rounded-full">
+                      <img
+                        src="https://api.lorem.space/image/face?hash=92310"
+                      />
+                    </div>
+                    <h4 class="pl-2">Susilo Suharsono</h4>
+                  </div>
+                  <div class="text-sm text-info">June 13, 2022</div>
+                  <div class="flex justify-end gap-2">
+                    <div class="badge badge-sm badge-accent">Fashion</div>
+                    <div class="badge badge-sm badge-accent">Products</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card bg-base-100 shadow-xl">
+              <figure>
+                <img
+                  src="https://api.lorem.space/image/shoes?"
+                  class="w-full h-64 object-cover"
+                  alt="Shoes"
+                  loading="lazy"
+                />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title font-bold">
+                  Ullamco culpa tempor quis aliqua minim tempor duis nostrud
+                  Lorem culpa exercitation ut.
+                </h2>
+                <div class="card-actions justify-between items-center mt-2">
+                  <div class="avatar items-center">
+                    <div class="w-12 rounded-full">
+                      <img
+                        src="https://api.lorem.space/image/face?hash=92310"
+                      />
+                    </div>
+                    <h4 class="pl-2">Susilo Suharsono</h4>
+                  </div>
+                  <div class="text-sm text-info">June 13, 2022</div>
+                  <div class="flex justify-end gap-2">
+                    <div class="badge badge-sm badge-accent">Fashion</div>
+                    <div class="badge badge-sm badge-accent">Products</div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card bg-base-100 shadow-xl">
-            <figure>
-              <img
-                src="https://api.lorem.space/image/shoes?"
-                class="w-full h-64 object-cover"
-                alt="Shoes"
-                loading="lazy"
-              />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title font-bold">
-                Ullamco culpa tempor quis aliqua minim tempor duis nostrud Lorem
-                culpa exercitation ut.
-              </h2>
-              <div class="card-actions justify-between items-center mt-2">
-                <div class="avatar items-center">
-                  <div class="w-12 rounded-full">
-                    <img src="https://api.lorem.space/image/face?hash=92310" />
-                  </div>
-                  <h4 class="pl-2">Susilo Suharsono</h4>
-                </div>
-                <div class="text-sm text-info">June 13, 2022</div>
-                <div class="flex justify-end gap-2">
-                  <div class="badge badge-sm badge-accent">Fashion</div>
-                  <div class="badge badge-sm badge-accent">Products</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-base-100 shadow-xl">
-            <figure>
-              <img
-                src="https://api.lorem.space/image/shoes?"
-                class="w-full h-64 object-cover"
-                alt="Shoes"
-                loading="lazy"
-              />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title font-bold">
-                Ullamco culpa tempor quis aliqua minim tempor duis nostrud Lorem
-                culpa exercitation ut.
-              </h2>
-              <div class="card-actions justify-between items-center mt-2">
-                <div class="avatar items-center">
-                  <div class="w-12 rounded-full">
-                    <img src="https://api.lorem.space/image/face?hash=92310" />
-                  </div>
-                  <h4 class="pl-2">Susilo Suharsono</h4>
-                </div>
-                <div class="text-sm text-info">June 13, 2022</div>
-                <div class="flex justify-end gap-2">
-                  <div class="badge badge-sm badge-accent">Fashion</div>
-                  <div class="badge badge-sm badge-accent">Products</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-base-100 shadow-xl">
-            <figure>
-              <img
-                src="https://api.lorem.space/image/shoes?"
-                class="w-full h-64 object-cover"
-                alt="Shoes"
-                loading="lazy"
-              />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title font-bold">
-                Ullamco culpa tempor quis aliqua minim tempor duis nostrud Lorem
-                culpa exercitation ut.
-              </h2>
-              <div class="card-actions justify-between items-center mt-2">
-                <div class="avatar items-center">
-                  <div class="w-12 rounded-full">
-                    <img src="https://api.lorem.space/image/face?hash=92310" />
-                  </div>
-                  <h4 class="pl-2">Susilo Suharsono</h4>
-                </div>
-                <div class="text-sm text-info">June 13, 2022</div>
-                <div class="flex justify-end gap-2">
-                  <div class="badge badge-sm badge-accent">Fashion</div>
-                  <div class="badge badge-sm badge-accent">Products</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-base-100 shadow-xl">
-            <figure>
-              <img
-                src="https://api.lorem.space/image/shoes?"
-                class="w-full h-64 object-cover"
-                alt="Shoes"
-                loading="lazy"
-              />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title font-bold">
-                Ullamco culpa tempor quis aliqua minim tempor duis nostrud Lorem
-                culpa exercitation ut.
-              </h2>
-              <div class="card-actions justify-between items-center mt-2">
-                <div class="avatar items-center">
-                  <div class="w-12 rounded-full">
-                    <img src="https://api.lorem.space/image/face?hash=92310" />
-                  </div>
-                  <h4 class="pl-2">Susilo Suharsono</h4>
-                </div>
-                <div class="text-sm text-info">June 13, 2022</div>
-                <div class="flex justify-end gap-2">
-                  <div class="badge badge-sm badge-accent">Fashion</div>
-                  <div class="badge badge-sm badge-accent">Products</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card bg-base-100 shadow-xl">
-            <figure>
-              <img
-                src="https://api.lorem.space/image/shoes?"
-                class="w-full h-64 object-cover"
-                alt="Shoes"
-                loading="lazy"
-              />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title font-bold">
-                Ullamco culpa tempor quis aliqua minim tempor duis nostrud Lorem
-                culpa exercitation ut.
-              </h2>
-              <div class="card-actions justify-between items-center mt-2">
-                <div class="avatar items-center">
-                  <div class="w-12 rounded-full">
-                    <img src="https://api.lorem.space/image/face?hash=92310" />
-                  </div>
-                  <h4 class="pl-2">Susilo Suharsono</h4>
-                </div>
-                <div class="text-sm text-info">June 13, 2022</div>
-                <div class="flex justify-end gap-2">
-                  <div class="badge badge-sm badge-accent">Fashion</div>
-                  <div class="badge badge-sm badge-accent">Products</div>
-                </div>
-              </div>
-            </div>
+          <div class="btn-group mt-8 flex justify-center">
+            <button class="btn">1</button>
+            <button class="btn btn-active">2</button>
+            <button class="btn">3</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
           </div>
         </div>
-        <div class="btn-group mt-8 flex justify-center">
-          <button class="btn">1</button>
-          <button class="btn btn-active">2</button>
-          <button class="btn">3</button>
-          <button class="btn">4</button>
-          <button class="btn">5</button>
-        </div>
-      </div>
+      </section>
 
-      <section id="widget" class="mb-8">
+      <section title="Popular Post" class="px-20 mb-8">
+        <div class="container mx-auto">
+          <h2 class="text-center font-title font-bold text-5xl my-8">
+            Popular Posts
+          </h2>
+          <div
+            class="grid lg:grid-rows-2 lg:grid-cols-3 grid-cols-1 gap-4 mx-auto"
+          >
+            <div
+              class="card w-auto bg-base-100 shadow-xl image-full col-span-2 row-span-2"
+            >
+              <figure>
+                <img
+                  src="https://api.lorem.space/image/shoes?w=400&h=225"
+                  loading="lazy"
+                  alt="Shoes"
+                />
+              </figure>
+              <div
+                class="card-body text-center items-center absolute inset-x-6 inset-y-1/4"
+              >
+                <h2 class="card-title font-bold">
+                  Amet pariatur exercitation cillum incididunt est qui velit
+                  cillum aute cupidatat ullamco labore.
+                </h2>
+                <div
+                  class="flex items-center justify-center divide-x divide-white"
+                >
+                  <div class="avatar items-center lg:px-4 px-2 py-3">
+                    <div class="lg:w-8 w-6 rounded-full">
+                      <img
+                        src="https://api.lorem.space/image/face?hash=92310"
+                      />
+                    </div>
+                    <h4 class="pl-2 text-white hidden lg:block">
+                      Susilo Suharsono
+                    </h4>
+                  </div>
+                  <div class="lg:px-4 px-2 py-3 text-sm text-white">
+                    June 13, 2022
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card w-auto bg-base-100 shadow-xl image-full">
+              <figure>
+                <img
+                  src="https://api.lorem.space/image/shoes?w=400&h=225"
+                  loading="lazy"
+                  alt="Shoes"
+                />
+              </figure>
+              <div class="card-body p-0 text-center items-center inset-y-4">
+                <h2 class="card-title font-bold">
+                  Amet pariatur exercitation cillum incididunt est qui velit
+                  cillum aute cupidatat ullamco labore.
+                </h2>
+                <div
+                  class="flex items-center justify-center divide-x divide-white"
+                >
+                  <div class="avatar items-center lg:px-4 px-2 py-3">
+                    <div class="lg:w-8 w-6 rounded-full">
+                      <img
+                        src="https://api.lorem.space/image/face?hash=92310"
+                      />
+                    </div>
+                    <h4 class="pl-2 text-white hidden lg:block">
+                      Susilo Suharsono
+                    </h4>
+                  </div>
+                  <div class="lg:px-4 px-2 py-3 text-sm text-white">
+                    June 13, 2022
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card w-auto bg-base-100 shadow-xl image-full">
+              <figure>
+                <img
+                  src="https://api.lorem.space/image/shoes?w=400&h=225"
+                  loading="lazy"
+                  alt="Shoes"
+                />
+              </figure>
+              <div
+                class="card-body p-0 text-center items-center absolute inset-y-4"
+              >
+                <h2 class="card-title font-bold">
+                  Amet pariatur exercitation cillum incididunt est qui velit
+                  cillum aute cupidatat ullamco labore.
+                </h2>
+                <div
+                  class="flex items-center justify-center divide-x divide-white"
+                >
+                  <div class="avatar items-center lg:px-4 px-2 py-3">
+                    <div class="lg:w-8 w-6 rounded-full">
+                      <img
+                        src="https://api.lorem.space/image/face?hash=92310"
+                      />
+                    </div>
+                    <h4 class="pl-2 text-white hidden lg:block">
+                      Susilo Suharsono
+                    </h4>
+                  </div>
+                  <div class="lg:px-4 px-2 py-3 text-sm text-white">
+                    June 13, 2022
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="btn-group mt-8 flex justify-center">
+            <button class="btn">1</button>
+            <button class="btn btn-active">2</button>
+            <button class="btn">3</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+          </div>
+        </div>
+      </section>
+
+      <section title="widget" class="mb-8">
         <div class="lg:flex container px-20 mx-auto">
           <div
             class="grid gap-y-10 flex-grow rounded-box place-items-center mt-4"
@@ -539,7 +612,7 @@
           </div>
         </div>
       </section>
-      <section id="cta">
+      <section title="cta">
         <div
           class="py-16 bg-gradient-to-br from-primary to-secondary md:bg-gradient-to-r"
         >
